creator_beta/tests/arch/mips/correct/syscalls/test_mips_syscall_012.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text   
    main:    
        li $v0, 12
        syscall