creator_beta/tests/arch/mips/error/executor/test_mips_error_executor_002.s

#
# Creator (https://creatorsim.github.io/creator/)
#

.text
main_:
    li $t0, 10
